--- a/src/CheeseMVC/Views/Cheese/Index.cshtml
+++ b/src/CheeseMVC/Views/Cheese/Index.cshtml
@@ -7,7 +7,7 @@
     <tr>
         <th>Name</th>
         <th>Description</th>
-        <td>Type</td>
+        <th>Category</th>
     </tr>
 
     @foreach (var cheese in Model)
